cleaned up code

--- a/index.html
+++ b/index.html
@@ -20,42 +20,42 @@
     <div class="game-grid">
       <div class="custom-row">
         <div class="row">
-          <div class="col-sm-3 card" id"'0" data-count="0">
+          <div class="col-sm-3 card" id="0" data-count="0">
             <img src="images/sample-1.jpg" alt="Card" class="img-rounded">
           </div>
-          <div class="col-sm-3 card" id"'1" data-count="0">
+          <div class="col-sm-3 card" id="1" data-count="0">
             <img src="images/sample-1.jpg" alt="Card" class="img-rounded">
           </div>
-          <div class="col-sm-3 card" id"'2" data-count="0">
+          <div class="col-sm-3 card" id="2" data-count="0">
             <img src="images/sample-1.jpg" alt="Card" class="img-rounded">
           </div>
-          <div class="col-sm-3 card" id"'3" data-count="0">
-            <img src="images/sample-1.jpg" alt="Card" class="img-rounded">
-          </div>
-        </div>
-      </div>
-      <div class="custom-row">
-        <div class="row">
-          <div class="col-sm-3 card" id"'4" data-count="0">
-            <img src="images/sample-1.jpg" alt="Card" class="img-rounded">
-          </div>
-          <div class="col-sm-3 card" id"'5" data-count="0">
-            <img src="images/sample-1.jpg" alt="Card" class="img-rounded">
-          </div>
-          <div class="col-sm-3 card" id"'6" data-count="0">
-            <img src="images/sample-1.jpg" alt="Card" class="img-rounded">
-          </div>
-          <div class="col-sm-3 card" id"'7" data-count="0">
+          <div class="col-sm-3 card" id="3" data-count="0">
             <img src="images/sample-1.jpg" alt="Card" class="img-rounded">
           </div>
         </div>
       </div>
       <div class="custom-row">
         <div class="row">
-          <div class="col-sm-3 card" id"'8" data-count="0">
+          <div class="col-sm-3 card" id="4" data-count="0">
             <img src="images/sample-1.jpg" alt="Card" class="img-rounded">
           </div>
-          <div class="col-sm-3 card" id"'9" data-count="0">
+          <div class="col-sm-3 card" id="5" data-count="0">
+            <img src="images/sample-1.jpg" alt="Card" class="img-rounded">
+          </div>
+          <div class="col-sm-3 card" id="6" data-count="0">
+            <img src="images/sample-1.jpg" alt="Card" class="img-rounded">
+          </div>
+          <div class="col-sm-3 card" id="7" data-count="0">
+            <img src="images/sample-1.jpg" alt="Card" class="img-rounded">
+          </div>
+        </div>
+      </div>
+      <div class="custom-row">
+        <div class="row">
+          <div class="col-sm-3 card" id="8" data-count="0">
+            <img src="images/sample-1.jpg" alt="Card" class="img-rounded">
+          </div>
+          <div class="col-sm-3 card" id="9" data-count="0">
             <img src="images/sample-1.jpg" alt="Card" class="img-rounded">
           </div>
           <div class="col-sm-3 card" id="10" data-count="0">
@@ -68,13 +68,13 @@
       </div>
       <div class="custom-row">
         <div class="row">
-          <div class="col-sm-3 card" id="12" data-count="0">
+          <div class="col-sm-3 card" id="12" data-value="0">
             <img src="images/sample-1.jpg" alt="Card" class="img-rounded">
           </div>
-          <div class="col-sm-3 card" id="13" data-count="0">
+          <div class="col-sm-3 card" id="13" data-value="0">
             <img src="images/sample-1.jpg" alt="Card" class="img-rounded">
           </div>
-          <div class="col-sm-3 card" id="14" data-count="0">
+          <div class="col-sm-3 card" id="14" data-value="0">
             <img src="images/sample-1.jpg" alt="Card" class="img-rounded">
           </div>
           <div class="col-sm-3 card" id="15" data-count="0">
